@@ -1,14 +1,14 @@
-# $NetBSD: Makefile,v 1.15 2018/07/28 14:40:51 brook Exp $
+# $NetBSD: Makefile,v 1.16 2019/07/31 20:33:59 brook Exp $
 
-CATEGORIES=	math
+CATEGORIES=	math R
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/statmod/
-COMMENT=	Miscellaneous biostatistical modeling functions
-LICENSE=	gnu-lgpl-v2 OR gnu-lgpl-v3
+COMMENT=	Statistical modeling
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
 
 R_PKGNAME=	statmod
-R_PKGVER=	1.4.30
+R_PKGVER=	1.4.32
 
 USE_LANGUAGES+=	c fortran
 
