@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.13 2017/12/02 12:00:34 wen Exp $
+$NetBSD: distinfo,v 1.14 2019/07/31 20:33:59 brook Exp $
 
-SHA1 (R/statmod_1.4.30.tar.gz) = fbfb0de85ff3e79c5c860145ab2996168a204960
-RMD160 (R/statmod_1.4.30.tar.gz) = ff1044a282ca019743312bb0f92227a76aee3965
-SHA512 (R/statmod_1.4.30.tar.gz) = 5a230fa1ebc73c163c3020d1110f1f343a76756865e261bb3db2a451e8ba4d669d2c96f9f66929f6fde80cc27291e5f2fd951c80ac79c2e04a9f846248c5ef51
-Size (R/statmod_1.4.30.tar.gz) = 57309 bytes
+SHA1 (R/statmod_1.4.32.tar.gz) = e4c634788e4f5e024071df9864619764468418e2
+RMD160 (R/statmod_1.4.32.tar.gz) = c6f37c10cb2f59c6cb1b03166ee50b9f7d381fe6
+SHA512 (R/statmod_1.4.32.tar.gz) = c4e16c9cf123a6a961c73ab5d51c5b2daec8bddc4fb89d86bbeef85690ec85a945cc83333b10dfc2211d4d751d79db1e88ee30deab1dc4ce0f7f9d52af084a1c
+Size (R/statmod_1.4.32.tar.gz) = 59538 bytes
