@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3198 2019/07/31 20:31:27 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3199 2019/07/31 20:33:59 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5155,3 +5155,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated math/R-sgeostat to 1.0.27 [brook 2019-07-31]
 	Updated math/R-spacetime to 1.2.2 [brook 2019-07-31]
 	Updated math/R-splancs to 2.01.40 [brook 2019-07-31]
+	Updated math/R-statmod to 1.4.32 [brook 2019-07-31]
